--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./src/main.js"
-    
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
+    "express-session": "^1.17.3",
+    "node-fetch": "^3.3.2",
+    "randomstring": "^1.3.0"
   }
 }
