--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "node-fetch": "^3.3.2",
+    "mongoose": "^8.0.1",
     "randomstring": "^1.3.0"
   }
 }
