--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express-session": "^1.17.3",
     "mongoose": "^8.0.1",
     "randomstring": "^1.3.0"
+  },
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
   }
 }
