--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-generator": "^4.16.1",
     "express-session": "^1.17.3",
+    "luxon": "^3.4.4",
     "mongoose": "^8.0.1",
+    "pug": "^3.0.2",
     "randomstring": "^1.3.0"
   },
   "engines": {
-    "node": ">=18.18.0 <19.0.0"
+    "node": ">=18.18.0"
   }
 }
