--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
-    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "express-generator": "^4.16.1",
     "express-session": "^1.17.3",
     "luxon": "^3.4.4",
     "mongoose": "^8.0.1",
@@ -22,5 +20,8 @@
   },
   "engines": {
     "node": ">=18.18.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.3.1"
   }
 }
