--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
     "mongoose": "^8.0.1",
     "pug": "^3.0.2",
