--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node": ">=18.18.0"
   },
   "devDependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "nodemon": "^3.0.2"
   }
 }
