--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server",
     "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "luxon": "^3.4.4",
     "mongoose": "^8.0.1",
     "pug": "^3.0.2",
-    "randomstring": "^1.3.0"
+    "randomstring": "^1.3.0",
+    "socket.io": "^4.7.2"
   },
   "engines": {
     "node": ">=18.18.0"
